--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <p><b>Sudoku Auto-generation</b></p>
           <p class="w3-opacity">NTU</p>
           <p>Customized Graphic User Interface. Created a puzzle generation feature.(Java)</p>
-          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
+          <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
@@ -153,7 +153,7 @@
           <p><b>Crossy Road</b></p>
           <p class="w3-opacity">NTU</p>
           <p>Modelled movements with C# scripts and appearance with Blender.(UNITY3D, Blender, C#)</p>
-          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
+          <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
         </div>
       </div>
     </div>
@@ -165,7 +165,7 @@
           <p><b>E-commerce Website</b></p>
           <p class="w3-opacity">NTU</p>
           <p>MYSQL DataBase. React.js framework. Apache Tomcat servlets.(Apache Tomcat, JavaScript, HTML, CSS, MYSQL)</p>
-          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
+          <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
@@ -174,7 +174,7 @@
           <p><b>Covid-19 Application</b></p>
           <p class="w3-opacity">NTU</p>
           <p>Firebase. MySQL DataBase. Linked pages with Apache Tomcat Servlets through IP configuration.(Android Studio, Kotlin, FireBase)</p>
-          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
+          <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
@@ -220,7 +220,8 @@
           <p><b>Titanic Disaster Prediction</b></p>
           <p class="w3-opacity"></p>
           <p>ML models, Data cleaning, Variance Testing, Feature engineering</p>
-          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
+          <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
+
         </div>
       </div>
     </div>
