--- a/index.html
+++ b/index.html
@@ -96,26 +96,26 @@
           <p><b>Shopee Code League 2022</b></p>
           <p class="w3-opacity">Shopee</p>
           <p>Algorithm Challenge</p>
-          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
+          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Certificate</button>
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
         <img src="/images/Intuition.png" alt="New York" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>INTUITION</b></p>
-          <p class="w3-opacity">IEEE INTUITION v8.0</p>
+          <p class="w3-opacity">IEEE INTUITION v8.0 2022</p>
           <p>MC for ART. Telebot with google script API. CNN model in google cloud, Image Classification, Keras</p>
-          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
+          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Certificate</button>
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
         <img src="/images/DSTA.png" alt="New York" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Today-I-Learned</b></p>
-          <p class="w3-opacity">DSTA, BRAINHACK</p>
+          <p class="w3-opacity">DSTA, BRAINHACK 2021</p>
           <p>Prepared Data through Data Cleaning methods and modified parameters for optimization. 
             Utilized OpenCV and RESNET for our model to identify objects from Datasets</p>
-          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
+          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Certificate</button>
         </div>
       </div>
     </div>
@@ -164,7 +164,7 @@
         <div class="w3-container w3-white">
           <p><b>E-commerce Website</b></p>
           <p class="w3-opacity">NTU</p>
-          <p>MYSQL DataBase. React.js framework. Apache Tomcat servlets.(Apache Tomcat, JavaScript, HTML, CSS, MYSQL)</p>
+          <p>MYSQL DataBase. Apache Tomcat servlets.(Apache Tomcat, JavaScript, HTML, CSS, MYSQL)</p>
           <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
         </div>
       </div>
