--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
-        <img src="/images/paris.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/AndroidStudio.jpeg" alt="Paris" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Covid-19 Application</b></p>
           <p class="w3-opacity">NTU</p>
