--- a/index.html
+++ b/index.html
@@ -28,13 +28,10 @@
           class="w3-bar-item w3-button">Resume</a>
           <a href="https://www.linkedin.com/in/darren-soh-170999dsohjh/" 
           class="w3-bar-item w3-button">Linkedin</a>
-          <a href="https://drive.google.com/drive/folders/1mG6-pTAdaueMibFldCXdw4qGqOpuqS_K?usp=sharing" 
-          class="w3-bar-item w3-button">ArtArchive</a>
           <a href="https://github.com/darren170999" 
           class="w3-bar-item w3-button">Github</a>
         </div>
       </div>
-      <!-- <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a> -->
     </div>
   </div>
 
@@ -95,7 +92,8 @@
         <div class="w3-container w3-white">
           <p><b>Shopee Code League 2022</b></p>
           <p class="w3-opacity">Shopee</p>
-          <p>Algorithm Challenge</p>
+          <p>Algorithm Challenge. Python and Java. BFS, DFS, Dijkstra, Greedy, 
+            Longest common Subsequence. Participant</p>
           <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Certificate</button>
         </div>
       </div>
@@ -104,7 +102,8 @@
         <div class="w3-container w3-white">
           <p><b>INTUITION</b></p>
           <p class="w3-opacity">IEEE INTUITION v8.0 2022</p>
-          <p>MC for ART. Telebot with google script API. CNN model in google cloud, Image Classification, Keras</p>
+          <p>Group name: MC for ART. Telebot with google script API. CNN model in google cloud, 
+            Image Classification, Keras image processing. First Place in Health Category.</p>
           <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Certificate</button>
         </div>
       </div>
@@ -113,8 +112,8 @@
         <div class="w3-container w3-white">
           <p><b>Today-I-Learned</b></p>
           <p class="w3-opacity">DSTA, BRAINHACK 2021</p>
-          <p>Prepared Data through Data Cleaning methods and modified parameters for optimization. 
-            Utilized OpenCV and RESNET for our model to identify objects from Datasets</p>
+          <p>Data preperation, data cleaning, modified parameters for optimization. 
+            Utilized OpenCV and RESNET for our model to identify objects from Datasets. Ninth Overall</p>
           <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Certificate</button>
         </div>
       </div>
