--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
-        <img src="/images/sanfran.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/Twilio.png" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Twilio Chatbot</b></p>
           <p class="w3-opacity">Personal</p>
