--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <div class="w3-display-middle w3-panel w3-center" style="background-color: transparent">
     <div class="centered" style>
       <div class="typewriter">
-        <h1> Life is greater with Coding</h1>
+        <h1> I think life is greater with Coding</h1>
       </div>
     </div>
   </div>
@@ -196,7 +196,7 @@
 
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
       <div class="w3-third w3-margin-bottom">
-        <img src="/images/paris.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/AiTestKitchen.png" alt="Paris" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>AI Test Kitchen</b></p>
           <p class="w3-opacity">Google</p>
@@ -218,7 +218,7 @@
         <div class="w3-container w3-white">
           <p><b>Titanic Disaster Prediction</b></p>
           <p class="w3-opacity"></p>
-          <p>ML models, Data cleaning, Variance Testing, Feature engineering</p>
+          <p>ML models, Data cleaning, Variance Testing, Feature engineering, AutoML TPOT</p>
           <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
 
         </div>
@@ -227,7 +227,7 @@
     <!-- Second Row of ML -->
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
       <div class="w3-third w3-margin-bottom">
-        <img src="/images/sanfran.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/MediaPipe.png" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Basic MediaPipe</b></p>
           <p class="w3-opacity"></p>
