--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
-        <img src="/images/NotnowLizards.png" alt="Paris" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/NotNowLizards.jpeg" alt="Paris" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Not now lizards!</b></p>
           <p class="w3-opacity">MLDA</p>
@@ -260,6 +260,34 @@
 
 <!-- Image of location/map -->
 <img src="/images/SG.jpg" class="w3-image w3-greyscale-min" style="width:100%">
+
+<!-- <div class="mySlides w3-display-container w3-center">
+  <img src="/w3images/astronaut.png" style="width:100%">
+  <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+    <h3>About Me</h3>
+    <p><b>Darren Soh</b></p>    
+  </div>
+</div>
+<div class="mySlides w3-display-container w3-center">
+  <img src="/w3images/astronaut.png" style="width:100%">
+  <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+    <h3>Hobbies</h3>
+    <p><b>Coding, Hackerank, Fitness enthusiast, Reading, Sports</b></p>    
+  </div>
+</div>
+<div class="mySlides w3-display-container w3-center">
+  <img src="/w3images/astronaut.png" style="width:100%">
+  <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+    <h3>Tech Stacks</h3>
+    <p><b>Android Programming, React, Spring Boot, Spring Data JPA, PostGreSQL, MYSQL, Restful API, Apache Tomcat</b></p>    
+  </div>
+</div> -->
+
+
+
+
+
+
 <br></br>
 <!-- #ART -->
 
