--- a/index.html
+++ b/index.html
@@ -220,7 +220,6 @@
           <p class="w3-opacity"></p>
           <p>ML models, Data cleaning, Variance Testing, Feature engineering, AutoML TPOT</p>
           <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
-
         </div>
       </div>
     </div>
@@ -302,6 +301,7 @@
   <i class="fa fa-facebook-official w3-hover-opacity" style="width:30px;color:white"></i>
   <i class="fa fa-instagram w3-hover-opacity" style="width:30px;color:white"></i>
   <i class="fa fa-linkedin w3-hover-opacity" style="width:30px;color:white"></i>
+  <h7>Powered By HTML, CSS, JS</h7>
 </footer>
 
 <!-- scripts -->
