--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <p><b>Shopee Code League 2022</b></p>
           <p class="w3-opacity">Shopee</p>
           <p>Algorithm Challenge. Python and Java. BFS, DFS, Dijkstra, Greedy, 
-            Longest common Subsequence. Participant</p>
+            Longest common Subsequence. Participation. </p>
           <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Certificate</button>
         </div>
       </div>
@@ -102,8 +102,8 @@
         <div class="w3-container w3-white">
           <p><b>INTUITION</b></p>
           <p class="w3-opacity">IEEE INTUITION v8.0 2022</p>
-          <p>Group name: MC for ART. Telebot with google script API. CNN model in google cloud, 
-            Image Classification, Keras image processing. First Place in Health Category.</p>
+          <p>Group name: MC for ART. Telegram bot with google script API. CNN model launched in google cloud, 
+            Image Classification, Keras image processing. First Place in Healthcare Category.</p>
           <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Certificate</button>
         </div>
       </div>
@@ -112,7 +112,7 @@
         <div class="w3-container w3-white">
           <p><b>Today-I-Learned</b></p>
           <p class="w3-opacity">DSTA, BRAINHACK 2021</p>
-          <p>Data preperation, data cleaning, modified parameters for optimization. 
+          <p>Data preperation and cleaning, modified parameters for optimization. 
             Utilized OpenCV and RESNET for our model to identify objects from Datasets. Ninth Overall</p>
           <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Certificate</button>
         </div>
