--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
   </div>
 
 <!-- particles.js container -->
+<div class="w3-black" id="HOME"></div>
+
 <div id="particles-js">
   <div class="w3-display-middle w3-panel w3-center" style="background-color: transparent">
     <div class="centered" style>
@@ -98,7 +100,7 @@
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
-        <img src="/images/Intuition.png" alt="New York" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/INTU.png" alt="New York" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>INTUITION</b></p>
           <p class="w3-opacity">IEEE INTUITION v8.0 2022</p>
