--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
   </div>
 </div>
 <!--#HACK-->
+<!--  https://drive.google.com/file/d/1zeqkRtUDyowKAIAN5D4iY8fd3IsRzNEB/view?usp=sharing-->
 <div class="w3-black" id="HACK">
   <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
     <h2 class="w3-wide w3-center">HACKATHONS!</h2>
@@ -96,7 +97,7 @@
           <p class="w3-opacity">Shopee</p>
           <p>Algorithm Challenge. Python and Java. BFS, DFS, Dijkstra, Greedy, 
             Longest common Subsequence. Participation. </p>
-          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Certificate</button>
+          <a href="https://drive.google.com/file/d/1jW_Wr0YYpkZ3CUhi3cTAJGMwhrthuwLq/view?usp=sharing" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Certificate</a>
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
@@ -106,7 +107,7 @@
           <p class="w3-opacity">IEEE INTUITION v8.0 2022</p>
           <p>Group name: MC for ART. Telegram bot with google script API. CNN model launched in google cloud, 
             Image Classification, Keras image processing. First Place in Healthcare Category.</p>
-          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Certificate</button>
+          <a href="https://drive.google.com/file/d/19cagHFVPoFpJ2CEOB6sP_PVJudmpgT_9/view" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Certificate</a>
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
@@ -116,7 +117,7 @@
           <p class="w3-opacity">DSTA, BRAINHACK 2021</p>
           <p>Data preperation and cleaning, modified parameters for optimization. 
             Utilized OpenCV and RESNET for our model to identify objects from Datasets. Ninth Overall</p>
-          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Certificate</button>
+          <a href="https://drive.google.com/file/d/1sJ4p2BCACl4KUlsreoNjLHT9EU8xatW3/view?usp=sharing" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Certificate</a>
         </div>
       </div>
     </div>
@@ -300,9 +301,9 @@
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-black w3-xlarge">
-  <i class="fa fa-facebook-official w3-hover-opacity" style="width:30px;color:white"></i>
+  <!-- <i class="fa fa-facebook-official w3-hover-opacity" style="width:30px;color:white"></i>
   <i class="fa fa-instagram w3-hover-opacity" style="width:30px;color:white"></i>
-  <i class="fa fa-linkedin w3-hover-opacity" style="width:30px;color:white"></i>
+  <i class="fa fa-linkedin w3-hover-opacity" style="width:30px;color:white"></i> -->
   <h7>Powered By HTML, CSS, JS</h7>
 </footer>
 
