--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!-- Navbar -->
 <div class="w3-top">
     <div class="w3-bar w3-black w3-card">
-      <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+      <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right container" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
       <a href="#HOME" class="w3-bar-item w3-button w3-padding-large">HOME</a>
       <a href="#EXP" class="w3-bar-item w3-button w3-padding-large">EXP</a>
       <a href="#HACK" class="w3-bar-item w3-button w3-padding-large">HACK</a>
