--- a/index.html
+++ b/index.html
@@ -91,33 +91,33 @@
 
     <div class="w3-grid-container w3-row-padding w3-padding-32" style="margin:0 -16px; height:100%">
       <div class="w3-third w3-margin-bottom">
-        <img src="/images/SCL2.jpeg" alt="New York" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/SCL2.jpeg" alt="New York" style="width:100%; height:100%;" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Shopee Code League 2022</b></p>
           <p class="w3-opacity">Shopee</p>
-          <div style="height: 150px;">Algorithm Challenge. Python and Java. BFS, DFS, Dijkstra, Greedy, 
+          <div style="height: 300px;">Algorithm Challenge. Python and Java. BFS, DFS, Dijkstra, Greedy, 
             Longest common Subsequence. Participation. 
             <a href="https://drive.google.com/file/d/1jW_Wr0YYpkZ3CUhi3cTAJGMwhrthuwLq/view?usp=sharing" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Certificate</a>
           </div>
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
-        <img src="/images/INTU.png" alt="New York" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/INTU.png" alt="New York" style="width:100%; height:100%;" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>INTUITION</b></p>
           <p class="w3-opacity">IEEE INTUITION v8.0 2022</p>
-          <div style="height: 150px;">Group name: MC for ART. Telegram bot with google script API. CNN model launched in google cloud, 
+          <div style="height: 300px;">Group name: MC for ART. Telegram bot with google script API. CNN model launched in google cloud, 
             Image Classification, Keras image processing. First Place in Healthcare Category.
             <a href="https://drive.google.com/file/d/19cagHFVPoFpJ2CEOB6sP_PVJudmpgT_9/view" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Certificate</a>
           </div>
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
-        <img src="/images/DSTA.png" alt="New York" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/DSTA.png" alt="New York" style="width:100%;height:100%;" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Today-I-Learned</b></p>
           <p class="w3-opacity">DSTA, BRAINHACK 2021</p>
-          <div style="height: 150px;">Data preperation and cleaning, modified parameters for optimization. 
+          <div style="height: 300px;">Data preperation and cleaning, modified parameters for optimization. 
             Utilized OpenCV and RESNET for our model to identify objects from Datasets. Ninth Overall</p>
           <a href="https://drive.google.com/file/d/1sJ4p2BCACl4KUlsreoNjLHT9EU8xatW3/view?usp=sharing" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Certificate</a>
         </div>
