--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 </div>
 <!--#HACK-->
 <!--  https://drive.google.com/file/d/1zeqkRtUDyowKAIAN5D4iY8fd3IsRzNEB/view?usp=sharing-->
-<div class="w3-black" id="HACK">
+<div class="w3-black grid-container" id="HACK">
   <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
     <h2 class="w3-wide w3-center">HACKATHONS!</h2>
     <p class="w3-opacity w3-center"><i>Won some lost many</i></p><br>
