--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 </div>
 <!--#HACK-->
 <!--  https://drive.google.com/file/d/1zeqkRtUDyowKAIAN5D4iY8fd3IsRzNEB/view?usp=sharing-->
-<div class="w3-black" id="HACK">
+<div class="w3-black grid-container" id="HACK">
   <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
     <h2 class="w3-wide w3-center">HACKATHONS!</h2>
     <p class="w3-opacity w3-center"><i>Won some lost many</i></p><br>
@@ -95,7 +95,7 @@
         <div class="w3-container w3-white">
           <p><b>Shopee Code League 2022</b></p>
           <p class="w3-opacity">Shopee</p>
-          <div style="height: 100%;">Algorithm Challenge. Python and Java. BFS, DFS, Dijkstra, Greedy, 
+          <div style="height: 300px;">Algorithm Challenge. Python and Java. BFS, DFS, Dijkstra, Greedy, 
             Longest common Subsequence. Participation. 
             <a href="https://drive.google.com/file/d/1jW_Wr0YYpkZ3CUhi3cTAJGMwhrthuwLq/view?usp=sharing" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Certificate</a>
           </div>
@@ -106,7 +106,7 @@
         <div class="w3-container w3-white">
           <p><b>INTUITION</b></p>
           <p class="w3-opacity">IEEE INTUITION v8.0 2022</p>
-          <div style="height: 100%;">Group name: MC for ART. Telegram bot with google script API. CNN model launched in google cloud, 
+          <div style="height: 300px;">Group name: MC for ART. Telegram bot with google script API. CNN model launched in google cloud, 
             Image Classification, Keras image processing. First Place in Healthcare Category.
             <a href="https://drive.google.com/file/d/19cagHFVPoFpJ2CEOB6sP_PVJudmpgT_9/view" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Certificate</a>
           </div>
@@ -117,7 +117,7 @@
         <div class="w3-container w3-white">
           <p><b>Today-I-Learned</b></p>
           <p class="w3-opacity">DSTA, BRAINHACK 2021</p>
-          <div style="height: 100%;">Data preperation and cleaning, modified parameters for optimization. 
+          <div style="height: 300px;">Data preperation and cleaning, modified parameters for optimization. 
             Utilized OpenCV and RESNET for our model to identify objects from Datasets. Ninth Overall</p>
           <a href="https://drive.google.com/file/d/1sJ4p2BCACl4KUlsreoNjLHT9EU8xatW3/view?usp=sharing" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Certificate</a>
         </div>
