Revert "Update index.html"
This reverts commit 9f2ae6e28227ed900d0b96e7b1ecaa18c40a3363.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="w3-container w3-white">
           <p><b>Shopee Code League 2022</b></p>
           <p class="w3-opacity">Shopee</p>
-          <p style="overflow:scroll; height: 100%;">Algorithm Challenge. Python and Java. BFS, DFS, Dijkstra, Greedy, 
+          <p>Algorithm Challenge. Python and Java. BFS, DFS, Dijkstra, Greedy, 
             Longest common Subsequence. Participation. </p>
           <a href="https://drive.google.com/file/d/1jW_Wr0YYpkZ3CUhi3cTAJGMwhrthuwLq/view?usp=sharing" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Certificate</a>
         </div>
@@ -105,7 +105,7 @@
         <div class="w3-container w3-white">
           <p><b>INTUITION</b></p>
           <p class="w3-opacity">IEEE INTUITION v8.0 2022</p>
-          <p style="overflow:scroll; height: 100%;">Group name: MC for ART. Telegram bot with google script API. CNN model launched in google cloud, 
+          <p>Group name: MC for ART. Telegram bot with google script API. CNN model launched in google cloud, 
             Image Classification, Keras image processing. First Place in Healthcare Category.</p>
           <a href="https://drive.google.com/file/d/19cagHFVPoFpJ2CEOB6sP_PVJudmpgT_9/view" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Certificate</a>
         </div>
@@ -115,7 +115,7 @@
         <div class="w3-container w3-white">
           <p><b>Today-I-Learned</b></p>
           <p class="w3-opacity">DSTA, BRAINHACK 2021</p>
-          <p style="overflow:scroll; height: 100%;">Data preperation and cleaning, modified parameters for optimization. 
+          <p>Data preperation and cleaning, modified parameters for optimization. 
             Utilized OpenCV and RESNET for our model to identify objects from Datasets. Ninth Overall</p>
           <a href="https://drive.google.com/file/d/1sJ4p2BCACl4KUlsreoNjLHT9EU8xatW3/view?usp=sharing" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Certificate</a>
         </div>
@@ -135,7 +135,7 @@
         <div class="w3-container w3-white">
           <p><b>Tic-Tac-Toe</b></p>
           <p class="w3-opacity">CS50x Harvard, Cambridge</p>
-          <p style="overflow:scroll; height: 100%;">Utilized Object Oriented Programming skills and built self-made sprites.(C,Love2D,Lua)</p>
+          <p>Utilized Object Oriented Programming skills and built self-made sprites.(C,Love2D,Lua)</p>
           <!-- <button class="w3-button w3-black w3-margin-bottom">View Project</button> -->
           <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
         </div>
@@ -145,7 +145,7 @@
         <div class="w3-container w3-white">
           <p><b>Sudoku Auto-generation</b></p>
           <p class="w3-opacity">NTU</p>
-          <p style="overflow:scroll; height: 100%;">Customized Graphic User Interface. Created a puzzle generation feature.(Java)</p>
+          <p>Customized Graphic User Interface. Created a puzzle generation feature.(Java)</p>
           <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
         </div>
       </div>
@@ -154,7 +154,7 @@
         <div class="w3-container w3-white">
           <p><b>Crossy Road</b></p>
           <p class="w3-opacity">NTU</p>
-          <p style="overflow:scroll; height: 100%;">Modelled movements with C# scripts and appearance with Blender.(UNITY3D, Blender, C#)</p>
+          <p>Modelled movements with C# scripts and appearance with Blender.(UNITY3D, Blender, C#)</p>
           <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
         </div>
       </div>
@@ -166,7 +166,7 @@
         <div class="w3-container w3-white">
           <p><b>E-commerce Website</b></p>
           <p class="w3-opacity">NTU</p>
-          <p style="overflow:scroll; height: 100%;">MYSQL DataBase. Apache Tomcat servlets.(Apache Tomcat, JavaScript, HTML, CSS, MYSQL)</p>
+          <p>MYSQL DataBase. Apache Tomcat servlets.(Apache Tomcat, JavaScript, HTML, CSS, MYSQL)</p>
           <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
         </div>
       </div>
@@ -175,7 +175,7 @@
         <div class="w3-container w3-white">
           <p><b>Covid-19 Application</b></p>
           <p class="w3-opacity">NTU</p>
-          <p style="overflow:scroll; height: 100%;">Firebase. MySQL DataBase. Linked pages with Apache Tomcat Servlets through IP configuration.(Android Studio, Kotlin, FireBase)</p>
+          <p>Firebase. MySQL DataBase. Linked pages with Apache Tomcat Servlets through IP configuration.(Android Studio, Kotlin, FireBase)</p>
           <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
         </div>
       </div>
@@ -184,7 +184,7 @@
         <div class="w3-container w3-white">
           <p><b>Twilio Chatbot</b></p>
           <p class="w3-opacity">Personal</p>
-          <p style="overflow:scroll; height: 100%;">Spring Framework with BootStrap, Postgres DataBase and Twilio interface.</p>
+          <p>Spring Framework with BootStrap, Postgres DataBase and Twilio interface.</p>
           <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In Progress</button>
         </div>
       </div>
